<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str2"
        android:layout_below="@id/editText2"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="186dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str3"
        android:layout_below="@id/editText3"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="313dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str4"
        android:layout_below="@id/editText4"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="438dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_toLeftOf="@id/seekBar4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="438dp" />

    <TextView
        android:id="@+id/textView6"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="438dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="97dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="229dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:layout_below="@id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="355dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:layout_below="@id/seekBar4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="564dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/editText3"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="229dp" />

    <SeekBar
        android:id="@+id/seekBar4"

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView4"
        android:layout_centerHorizontal="true"
        android:max="15"
        android:progress="5"
        android:scrollbarSize="20dp"
        android:layout_marginTop="25dp"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="506dp" />

</RelativeLayout>